--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ header{
   border-bottom-right-radius: 80px;
   border: 0.3px solid #c0c0c0;
 }
+.projects{
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
 #welcome-section h1{
   width: 100%;
   margin: auto;
@@ -35,7 +40,6 @@ header{
   background-color: scroll;
   background-position: center;
   background-size: 150px;
-  filter: grayscale(100%);
 }
 .profile-box{
     border-radius: 30px;
@@ -44,20 +48,20 @@ header{
     transform: rotate(-15deg);
     background-color: white;
     display: block;
-    min-width: 120px;
+    min-width: 130px;
     height: auto;
     text-align: center;
     padding: 15px 10px;
-    position: absolute;
+    position: relative;
     left: 95px;
     top: 45px;
 }
+
 nav{
   margin-bottom: 80px;
   font-size: 12px;
   font-family: impact;
   font-weight: 600;
-  #position: fixed;
 }
 nav ul{
   list-style-type: none;
@@ -70,8 +74,9 @@ nav ul{
 nav ul li{
   #display: inline-block;
 }
-.Logo2,.logo1{
+.brand-logo{
   filter: grayscale(100%);
+  width: 150px;
 }
 .btn-pills{
   display: inline-block;
@@ -290,4 +295,4 @@ hr{
   .projects{
     padding: 100px 0;
   }
-}
+  }}
